--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "version": "1.0.0",
     "main": "index.html",
     "dependencies": {
+        "bootstrap": "^5.2.3",
+        "jquery": "^3.6.4",
         "moment": "^2.29.4"
     }
 }
